--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
         "bootstrap": "^5.3.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-input-slider": "^6.0.1",
         "react-router-dom": "^6.2.1",
         "react-scripts": "5.0.1",
         "supertokens-auth-react": "latest",
