--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
         "react-input-slider": "^6.0.1",
         "react-router-dom": "^6.2.1",
         "react-scripts": "5.0.1",
+        "styled-components": "^6.1.8",
         "supertokens-auth-react": "latest",
         "web-vitals": "^2.1.4"
     },
